--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@netlify/functions": "^1.0.0",
     "@prisma/client": "^4.0.0",
     "@trpc/client": "^9.26.0",
     "@trpc/next": "^9.26.0",
     "@trpc/react": "^9.26.0",
     "@trpc/server": "^9.26.0",
+    "axios": "^0.27.2",
+    "cheerio": "^1.0.0-rc.12",
     "next": "12.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
