--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
     "@netlify/functions": "^1.0.0",
     "@prisma/client": "^4.0.0",
     "@trpc/client": "^9.26.0",
