--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-config-next": "12.1.6",
     "postcss": "^8.4.14",
     "prisma": "^4.0.0",
+    "tailwind-heropatterns": "^0.0.8",
     "tailwindcss": "^3.1.6",
     "typescript": "4.7.4"
   }
