--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint": "8.18.0",
     "eslint-config-next": "12.1.6",
     "postcss": "^8.4.14",
+    "prettier": "^2.7.1",
     "prisma": "^4.0.0",
     "tailwind-heropatterns": "^0.0.8",
     "tailwindcss": "^3.1.6",
